customers-and-suppliers/customers-and-suppliers-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-and-suppliers-ms-service
  labels:
    app: customers-and-suppliers-ms-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  selector:
    app: customers-and-suppliers-ms-deployment
